[project]
name = "comfyui-hypersdxl1stepunetscheduler"
description = "Original author is ByteDance.\nComfyUI sampler for HyperSDXL UNet\nPorted from: [a/https://huggingface.co/ByteDance/Hyper-SD](https://huggingface.co/ByteDance/Hyper-SD)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/fofr/ComfyUI-HyperSDXL1StepUnetScheduler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HyperSDXL1StepUnetScheduler"
Icon = ""
